--- a/src/main/webapp/i18n/zh-cn/home.json
+++ b/src/main/webapp/i18n/zh-cn/home.json
@@ -1,6 +1,6 @@
 {
   "home": {
-    "title": "XAnalysis",
+    "title": "Visual Gitwork",
     "subtitle": "简洁、直观的静态分析工具，让代码更安全、简单。",
     "document": "当前版本： v1.0.0 | 文档更新于：2020-04-25",
     "logged": {
